testcluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qotd
  namespace: default
spec:
  selector:
    matchLabels:
      app: qotd
  template:
    metadata:
      labels:
        app: qotd
    spec:
      containers:
        - name: qotd
          image: dhrp/qotd
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              name: http
