testcluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qotd
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: qotd
  ports:
    - port: 80
      targetPort: http
      name: http
      protocol: TCP
