testcluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: 45-135-56-148.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: qotd
                port:
                  number: 80
            path: /
  # # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #   - hosts:
  #       - 45-135-56-137.nip.io
  #     secretName: example-tls
